# poscomp_ai

./: .env.example  .gitignore  ANALISE_POSCOMP_2026.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analise_poscomp_work/: classify_poscomp_historical.py
analise_poscomp_work/poscomp_segmented/: 2002.md  2003.md  2004.md  2005.md  2006.md  2007.md  2008.md  2009.md  2010.md  2011.md  2012.md  2013.md  2014.md  2015.md  2016.md  2017.md  2018.md  2019.md  2022.md  2023.md  2024.md  2025.md  all_questions.jsonl
docker/: entrypoint.sh  nginx.conf
poscomp_app/: __init__.py  classify.py  db.py  extraction.py  main.py  seed.py  taxonomy.json
static/: app.js  styles.css
templates/: base.html
templates/admin/: answers.html  exam.html  index.html  question_edit.html  questions.html
templates/public/: _question.html  exam.html  home.html  simulado.html  simulados.html  subtopic.html  subtopics.html  topic.html  topics.html
